# docs/swagger.yaml
@@ -8,6 +8,26 @@ definitions:
       message:
         type: string
     type: object
+  github_com_Wenrh2004_sandbox_api_v1.TaskResultResponse:
+    properties:
+      code:
+        type: integer
+      data:
+        $ref: '#/definitions/github_com_Wenrh2004_sandbox_api_v1.TaskResultResponseBody'
+      message:
+        type: string
+    type: object
+  github_com_Wenrh2004_sandbox_api_v1.TaskResultResponseBody:
+    properties:
+      language:
+        type: string
+      stderr:
+        type: string
+      stdout:
+        type: string
+      task_id:
+        type: string
+    type: object
   github_com_Wenrh2004_sandbox_api_v1.TaskSubmitRequest:
     properties:
       code:
@@ -43,7 +63,7 @@ info:
   title: KingYen's Code SandBox API
   version: 1.0.0
 paths:
-  /v1/tasks/{submit_id}:
+  /task/{submit_id}:
     post:
       consumes:
         - application/json
@@ -80,6 +100,39 @@ paths:
           schema:
             $ref: '#/definitions/github_com_Wenrh2004_sandbox_api_v1.Response'
       summary: 提交任务
+      tags:
+        - 任务管理
+  /task/{task_id}:
+    get:
+      consumes:
+        - application/json
+      description: 获取已提交的任务执行结果
+      parameters:
+        - description: 任务ID
+          in: path
+          name: task_id
+          required: true
+          type: string
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            $ref: '#/definitions/github_com_Wenrh2004_sandbox_api_v1.TaskResultResponse'
+        "400":
+          description: 请求参数错误
+          schema:
+            $ref: '#/definitions/github_com_Wenrh2004_sandbox_api_v1.Response'
+        "401":
+          description: 未授权
+          schema:
+            $ref: '#/definitions/github_com_Wenrh2004_sandbox_api_v1.Response'
+        "500":
+          description: 服务器内部错误
+          schema:
+            $ref: '#/definitions/github_com_Wenrh2004_sandbox_api_v1.Response'
+      summary: 获取执行结果
       tags:
         - 任务管理
 securityDefinitions:
